[package]
name = "gpu-checker"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Daisuke Suda <ekusiadadus@breakai.ai>"]
description = "A simple GPU checker with Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5.4", features = ["derive"] }
